--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "dronix-redisenado",
   "version": "1.0.0",
+  "homepage": "https://moon1310009.github.io/dronix",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -14,6 +17,7 @@
     "vite": "^5.0.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "gh-pages": "^5.0.0"
   }
 }
